--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,12 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
-  scroll-behavior: smooth;
-}
-
 body {
-  background: rgb(19, 28, 39);
+  --background: rgb(19, 28, 39);
+  background: var(--background);
   color: rgba(255, 255, 255, 0.8);
   font-size: 14px;
 }
